이미지 추가

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -6,5 +6,9 @@ title:  "첫 포스팅"
 
 안녕하세요 저는 최원제입니다
 
- ![나](C:\Users\최원제\Desktop\초상화\나.jpg)
- ![나](../images/2025-06-30-first/나.jpg)
+ 
+ 
+
+ 
+
+![나](../images/2025-06-30-first/나-1751433380522-4.jpg)
