모노로그 로고 업데이트

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -2,13 +2,5 @@
 layout: single
 title:  "첫 포스팅"
 ---
-# 오늘 첫 블로그 생성
 
-안녕하세요 저는 최원제입니다
-
- 
-
-
-
-
-![나](../images/2025-06-30-first/나-1751433380522-4.jpg)
+![MonoLog](../../../../Desktop/MonoLog/MonoLog.png)
