모노로그 재업

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -3,4 +3,4 @@ layout: single
 title:  "첫 포스팅"
 ---
 
-![MonoLog](../../../../Desktop/MonoLog/MonoLog.png)
+![MonoLog](../images/2025-06-30-first/MonoLog.png)
