--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -1,6 +1,26 @@
 ---
 layout: single
 title:  "첫 포스팅"
+categories: coding
+tag: [C#, my, me]
+toc: true
 ---
 
 ![MonoLog](../images/2025-06-30-first/MonoLog.png)
+
+## 이미지 목차
+
+### 이미지 세부 목차 1
+
+### 이미지 세부 목차 2
+
+## 다른목차
+
+### 다른 목차 1
+
+### 다른 목차 2
+
+
+
+
+
