--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,6 +3,42 @@ title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
+layout: null
 ---
 
-<img src="C:\Users\최원제\Documents\GitHub\cwhendy.github.io\assets\images\404.jpg">
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>404 - Page Not Found</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #1e1e1e;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 6rem;
+      color: #ff6b6b;
+      margin: 0.2em 0;
+    }
+
+    p {
+      color: #aaa;
+      font-size: 1.2rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>404</h1>
+  <p>Page Not Found</p>
+</body>
+</html>
