검색기능 업데이트

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -4,6 +4,9 @@ title:  "첫 포스팅"
 categories: coding
 tag: [C#, my, me]
 toc: true
+author_profile: false
+sidebar:
+    nav: "docs"
 ---
 
 ![MonoLog](../images/2025-06-30-first/MonoLog.png)
