이미지 오류 고침

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -9,7 +9,7 @@ sidebar:
     nav: "docs"
 ---
 
-![MonoLog](../images/2025-06-30-first/MonoLog.png)
+![]({{site.url}}/images/2025-06-30-first/MonoLog.png)
 
 ## 이미지 목차
 
