카운트 업데이트

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -6,7 +6,7 @@ tag: [C#, my, me]
 toc: true
 author_profile: false
 sidebar:
-    nav: "docs"
+    nav: "counts"
 ---
 
 ![]({{site.url}}/images/2025-06-30-first/MonoLog.png)
