왼쪽 영역 확장

--- a/_posts/2025-06-30-first.md
+++ b/_posts/2025-06-30-first.md
@@ -5,8 +5,9 @@ categories: coding
 tag: [C#, my, me]
 toc: true
 author_profile: false
-sidebar:
-    nav: "counts"
+toc_label: 목차
+toc_sticky: true
+
 ---
 
 ![]({{site.url}}/images/2025-06-30-first/MonoLog.png)
